--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 class="icon"
               />
               <h3>Certification</h3>
-              <p>4 Months course<br />Fullstack Development</p>
+              <p>Infycle Technologies<br />Fullstack Development</p>
             </div>
           </div>
           <div class="text-container">
